css/style.css
@import url("photographer.css");

body {
  font-family: "DM Sans", sans-serif;
  margin: 0;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 90px;
}

h1 {
  color: #901c1c;
  margin-right: 100px;
}

.logo {
  height: 50px;
  margin-left: 100px;
}

.photographer_section {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 70px;
  margin-top: 100px;
}

.photographer_section article {
  justify-self: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.photographer_section article h2 {
  color: #d3573c;
  font-size: 36px;
}

.photographer_section article img {
  height: 200px;
  width: 200px;
  object-fit: cover;
  border-radius: 50%;
}

